cmake_minimum_required(VERSION 3.21)
project(URI)

set(CMAKE_CXX_STANDARD 23)

add_executable(URI main.cpp)

add_executable(uri_1001 Beginner/uri_1001.cpp)
add_executable(uri_1002 Beginner/uri_1002.cpp)
add_executable(uri_1003 Beginner/uri_1003.cpp)
add_executable(uri_1019 Beginner/uri_1019.cpp)
add_executable(uri_1035 Beginner/uri_1035.cpp)
add_executable(uri_1036 Beginner/uri_1036.cpp)
add_executable(uri_1047 Beginner/uri_1047.cpp)