cmake_minimum_required(VERSION 3.21)
project(URI)

set(CMAKE_CXX_STANDARD 23)

add_executable(URI main.cpp)

add_executable(uri_1001 beginner/uri_1001.cpp)
add_executable(uri_1002 beginner/uri_1002.cpp)
add_executable(uri_1003 beginner/uri_1003.cpp)
add_executable(uri_1019 beginner/uri_1019.cpp)
add_executable(uri_1035 beginner/uri_1035.cpp)
add_executable(uri_1036 beginner/uri_1036.cpp)
add_executable(uri_1047 beginner/uri_1047.cpp)
add_executable(uri_2770 beginner/uri_2770.cpp)
add_executable(uri_1837 beginner/uri_1837.cpp)
add_executable(uri_1103 ad-hoc/uri_1103.cpp)
add_executable(uri_1087 ad-hoc/uri_1087.cpp)
add_executable(uri1973 ad-hoc/uri_1973.cpp)